# Horse-Races

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  Makefile.linux  Makefile.windows  README.md  horse.py  justfile  main.cpp  main.py  pyproject.toml  shell.nix
.direnv/: nix-profile-25.11-p6gvrb36n5dh0cdg  nix-profile-25.11-p6gvrb36n5dh0cdg.rc
old/: horse.py  main.py
src/: horse.cpp  horse.h  main.cpp  modes.cpp  modes.h  reader.cpp  reader.h
utils/: ace.json  blank.json  laberynth.json  table.json
